# agent-sandbox-backend

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/agent_sandbox_backends/: __init__.py  api.py  version.py
src/agent_sandbox_backends/_internal/: __init__.py  bounded_output.py  ids.py
src/agent_sandbox_backends/application/: __init__.py  allocator.py  backend.py  command_handle.py  operation_pipeline.py  output_writer.py
src/agent_sandbox_backends/concurrency/: __init__.py  activity.py  keyed_rw_lock.py  lease.py  limiter.py
src/agent_sandbox_backends/config/: __init__.py  command.py  concurrency.py  models.py  retry.py  upload.py
src/agent_sandbox_backends/domain/: __init__.py  base.py  capabilities.py  commands.py  context.py  errors.py  files.py  identity.py  operations.py  sandbox.py  uploads.py
src/agent_sandbox_backends/helper/: __init__.py  build.py
src/agent_sandbox_backends/history/: __init__.py  bootstrap_outbox.py  config.py  encoding.py  memory.py  none.py  provider_transport.py  sandbox.py  sqlalchemy.py  sqlite.py
src/agent_sandbox_backends/integrations/: __init__.py
src/agent_sandbox_backends/ports/: __init__.py  history_store.py  history_transport.py  lease_store.py  provider.py
src/agent_sandbox_backends/providers/: __init__.py  registry.py
src/agent_sandbox_backends/security/: __init__.py  archive.py  upload_scanner.py
src/agent_sandbox_backends/upload/: __init__.py  archive.py  provider_transport.py  service.py
(+11 files in other folders)
