[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agent-sandbox-backends"
dynamic = ["version"]
description = "OpenSandbox backend SDK for AI agents"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "opensandbox>=0.1.14,<0.2",
  "pathspec>=0.12,<1",
  "pydantic>=2.11,<3",
  "typing-extensions>=4.12",
]

[project.optional-dependencies]
deepagents = ["deepagents>=0.6.12,<0.8"]
postgres = ["sqlalchemy[asyncio]>=2.0,<2.1", "asyncpg>=0.30,<1"]
sqlite-async = ["aiosqlite>=0.20,<1"]

[project.urls]
Homepage = "https://github.com/Rainbow0328/agent-sandbox-backend"
Repository = "https://github.com/Rainbow0328/agent-sandbox-backend"
Issues = "https://github.com/Rainbow0328/agent-sandbox-backend/issues"

[dependency-groups]
dev = [
  "deepagents>=0.6.12,<0.8",
  "pyright>=1.1.400",
  "ruff>=0.11",
  "sqlalchemy[asyncio]>=2.0,<2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sandbox_backends"]

[tool.hatch.version]
path = "src/agent_sandbox_backends/version.py"

[tool.hatch.build]
exclude = [
  "/.env",
  "/.idea",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.venv",
  "/0.11",
  "/dist",
  "**/__pycache__",
  "**/*.pyc",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
